[tool.poetry]
name = "ngt"
version = "0.1.0"
description = ""
authors = ["Lionel Blondé"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tmuxp = "^1.47.0"
beartype = "^0.19.0"
einops = "^0.8.0"
omegaconf = "^2.3.0"
fire = "^0.7.0"
tqdm = "^4.66.6"
h5py = "^3.12.1"
gymnasium = {extras = ["mujoco"], version = "^0.29"}
gymnasium-robotics = "^1.2.0"
dm-control = "^1.0.12"
numpy = "^1.26.0"
scipy = "^1.14.1"
torch = "^2.5.0"
tensordict-nightly = {version = "2024.9.29", allow-prereleases = true}
torchrl = "^0.6"
# torchrl-nightly = {version = "2025.1.1", allow-prereleases = true}
wandb = "^0.18.5"
pot = "^0.9.4"
geomloss = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
preview = true

[tool.ruff.lint]
select = [
    "E", "F", "W", "N", "A", "B", "C4", "T20", "PTH", "ERA", "FLY", "NPY", "RUF",
    "BLE", "FBT", "COM", "DTZ", "ISC", "ICN", "G", "PIE", "Q", "RSE", "RET", "SIM",
    "TID", "TRY", "PERF", "FURB", "LOG", "TD",
    "PL",
    # "ANN001", "ANN401", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206",
]
ignore = [
    "PLR0904", "PLR0911", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0916", "PLR0917",
    "SIM102", "TRY003", "TD003",
]
preview = true

[tool.poe.tasks]  # https://github.com/nat-n/poethepoet
# install
install = "poetry install --no-root"
install_nodev = "poetry install --no-root --no-dev"
# format
ruff_format = "poetry run ruff check --fix ."
ruff_fix = "poetry run ruff check --fix --unsafe-fixes ."
# delete venv and lock
_delete_venv = "poetry env remove python"
_delete_lock = "rm -f poetry.lock"
delete = ["_delete_lock", "_delete_venv"]
# reinstall of venv
reinstall = ["delete", "install"]
# cleaning
clean = """
rm -rf .coverage
        htmlcov
        coverage.xml
        .mypy_cache
        .ruff_cache
        .pytest_cache
        ./**/__pycache__
        dist
        logs
"""
# docker
docker = """
docker run \
    --gpus=all \
    --rm \
    -it \
    -u 1000:1000 \
    -v /etc/timezone:/etc/timezone:ro \
    -v /etc/localtime:/etc/localtime:ro \
    -v .:/workspace \
    candidj0/orca:latest
"""
docker_su = """
docker run \
    --gpus=all \
    --rm \
    -it \
    -v /etc/timezone:/etc/timezone:ro \
    -v /etc/localtime:/etc/localtime:ro \
    -v .:/workspace \
    candidj0/orca:latest
"""
docker_build = "docker build --build-arg USER_ID=1000 --build-arg GROUP_ID=1000 --no-cache -t candidj0/orca:latest ."
docker_push = "docker push candidj0/orca:latest"
dbp = ["docker_build", "docker_push"]

